Hide body overflow to prevent modal.prompt from lengthening page.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,12 +11,13 @@ body
 	margin: 0;
 	background-color: #404041;
 	color: white;
-  font-weight:200;
+	font-weight:200;
+	overflow: hidden;
 }
 
 html, input[type="submit"] {
 	font-family: 'Raleway', sans-serif;
-  font-weight:200;
+	font-weight:200;
 }
 
 a, img, input[type="submit"], .pointer {
